@@ -1,3 +1,13 @@
+- Fix menuBVR initialization problem
+- Implement ErmaC's HDAEnabler.dylib module
+- Fix Bug in the loop that look for an ATI card. Credits to Jief Luce
+- Fix extension without kPropOSBundleRequired property weren't loaded. Credits to Jief Luce
+- Fix Revision mismatch http://forge.voodooprojects.org/p/chameleon/issues/330/
+- ErmaC : Improve PCI info. Interface program and device revision.
+- Fix Possible bug in i386/libsaio/device_inject.c devprop_add_device() http://forge.voodooprojects.org/p/chameleon/issues/319/
+- Fix warnings/errors from new llvm/clang (xcode 4.6)
+- Fix base64 decode, fixes Issue http://forge.voodooprojects.org/p/chameleon/issues/320/
+- meklort : FileNVRAM module import
 - cparm : Added a workaroud for Xcode 4.4.x compatibility 504B030414030100630004731141000000007D0000008B00000003000B0062696E01990700020041450308001AED80DA50DF6080B0390FE095B3BC129E1FC27C104EC97897EF27CD1175766CB18C66FF42EFB7023911BDFD5E4BC9AEEC32FF3473963F70B255581D7B74DE9F
 - cparm : Fixed a buffer overflow in the plist loader
 - cparm : Ported the nvidia plist helper (less time to spend on the device id more time to code :-) )
